--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,20 @@
+
 body {
-    background-color: lightgray;
+    background-color: #e1f4f6;
+}
+@font-face {
+    font-family: Nadpis;
+    src: url('/static/fonts/Lexend-Bold.ttf');
+}
+.text-nadpis
+{
+    font-family: Nadpis;
+    color: #c03838;
+}
+@media only screen and (max-width: 576px) {
+
+    .text-nadpis {
+        font-size: smaller;
+    }
+
 }
