--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -68,7 +68,7 @@
                     <div class="row">
                         <div class="col-12 text center">
                         <button class="btn btn-default">
-                            <img src="{{ asset('static/sendbutton.png') }}/>
+                            <img src="{{ asset('static/sendbutton.png') }}"/>
                         </button>
                         </div>
                     </div>
