--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -4,8 +4,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 offset-1 text-nadpis">Vítejte na stránkách<br />mateřské školy Krupá.</div>
-            <div class="col-4 navig"><div class="butdiv"><img src="{{ asset('static/menubutton.png') }}"class="img-fluid"></div></div>
-            <! --- dodelat, div neni spravne s obrazky, scale??? --->
+            <div class="col-4 navig"><img src="{{ asset("/static/menubutton.png") }}" class="menutla">
+                <img src="{{ asset("/static/menubutton.png") }}" class="menutla"></div>
+            <! --- dodelat, div neni spravne s obrazky, scale???-nesedi --->
         </div>
         <div class="row">
             <div class="tesinasdiv">
@@ -66,10 +67,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 text center">
-                        <button class="btn btn-default">
-                            <img src="{{ asset('static/sendbutton.png') }}"/>
-                        </button>
+                        <div class="col-12 text-center">
+                        <button class="btn btn-light rounded-pill">Více novinek</button>
                         </div>
                     </div>
 
