--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -8,9 +8,9 @@
                 <img src="{{ asset("/static/menubutton.png") }}" class="menutla"></div>
             <! --- dodelat, div neni spravne s obrazky, scale???-nesedi --->
         </div>
-        <div class="row">
+        <div class="row phone-offset">
             <div class="tesinasdiv">
-                <div class="col-10 offset-1 maincont">
+                <div class="col-12 offset-0 maincont">
                     <div class ="row">
                         <div class="col-12">
                             <div class="text-center tesinasdiv text-whiteb" ><h1>Těší nás, že jste zavítali právě k nám.</h1>
@@ -68,9 +68,44 @@
                     </div>
                     <div class="row">
                         <div class="col-12 text-center">
-                        <button class="btn btn-light rounded-pill">Více novinek</button>
+                        <button class="btn btn-light rounded-pill btnnovinky">Více novinek</button>
+                            <! --- tehle button neco dela asi --->
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-12 mg-top-120">
+                            <h2 class="text-whiteb text-center">Napište nám</h2>
+                            <div class="row">
+                                <div class="col-12">
+                                    <form class="mg15">
+                                        <div class="form-row">
+                                            <div class="form-group col-md-6">
+                                                <label for="inputEmail4">Email</label>
+                                                <input type="text" class="form-control formtextinput forminpfocus" id="inputEmail4" placeholder="Zadejte vaše jméno">
+                                            </div>
+                                            <div class="form-group col-md-6">
+                                                <label for="inputPassword4">Password</label>
+                                                <input type="number" class="form-control formtextinput" id="inputPassword4" placeholder="Zadejte vaše telefonní číslo">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="inputAddress">Address</label>
+                                            <input type="email" class="form-control formtextinput" id="inputAddress" placeholder="Email">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="inputAddress2">Address 2</label>
+                                            <textarea class="form-control formtextinput" id="inputAddress2" placeholder="Napište nám a co nejdříve vám odpovíme." rows="6" cols="50"></textarea>
+                                        </div>
+                                        <div class="text-center">
+                                        <button type="submit" class="btn rounded-pill btnblue">Odeslat</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
 
                 </div>
             </div>
