--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -50,7 +50,6 @@
                                     <p>Vedle školky je rozlehlá zahrada, která je po rekonstrukci
                                         vybavena novými herními prvky a pískovištěm, zde si Vaše
                                         dítka budou moci užívat her a zabavy..</p>
-                                    <! --- todo: uprava fontu--->
                                 </div>
                             </div>
                         </div>
@@ -80,21 +79,21 @@
                                     <form class="mg15">
                                         <div class="form-row">
                                             <div class="form-group col-md-6">
-                                                <label for="inputEmail4">Email</label>
+                                                <label for="inputEmail4">Vaše jméno:</label>
                                                 <input type="text" class="form-control formtextinput forminpfocus" id="inputEmail4" placeholder="Zadejte vaše jméno">
                                             </div>
                                             <div class="form-group col-md-6">
-                                                <label for="inputPassword4">Password</label>
+                                                <label for="inputNubmer4">Telefonní číslo:</label>
                                                 <input type="number" class="form-control formtextinput" id="inputPassword4" placeholder="Zadejte vaše telefonní číslo">
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <label for="inputAddress">Address</label>
+                                            <label for="inputAddress">Email:</label>
                                             <input type="email" class="form-control formtextinput" id="inputAddress" placeholder="Email">
                                         </div>
 
                                         <div class="form-group">
-                                            <label for="inputAddress2">Address 2</label>
+                                            <label for="inputAddress2">Vaše zpráva:</label>
                                             <textarea class="form-control formtextinput" id="inputAddress2" placeholder="Napište nám a co nejdříve vám odpovíme." rows="6" cols="50"></textarea>
                                         </div>
                                         <div class="text-center">
@@ -105,8 +104,77 @@
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="row">
+                        <div class="col-10 offset-2">
+                        <table>
+                            <tbody>
+                            <tr class="spaceUnder">
+                                <td class="tablenadipis">Krupá 201</td>
 
+                            </tr>
+                            <tr>
+                                <td class="tablenadipis">270 09 Krupá</td>
+                            </tr>
+                            <tr class="mgtr">
+                                <td>
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="tabletext">email : mskrupa@poddzbansko.cz</td>
+                            </tr>
+                            <tr class="mgtr">
+                                <td>
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            <tr class="spaceUnder">
+                                <td class="tablenadipis">Tel. Ředitelka MŠ :</td>
+
+                            </tr>
+                            <tr>
+                                <td class="tabletext">602 448 762</td>
+                            </tr>
+                            <tr class="mgtr">
+                            <td>
+                                &nbsp;
+                            </td>
+                            </tr>
+                            <tr class="spaceUnder">
+                                <td class="tablenadipis">Tel. Jídelna MŠ :</td>
+
+                            </tr>
+                            <tr>
+                                <td class="tabletext">731 471 585</td>
+                            </tr>
+                            <tr>
+                                <td class="tabletext">313 575 111</td>
+                            </tr>
+                            <tr class="mgtr">
+                            <td>
+                                &nbsp;
+                            </td>
+                            <tr>
+                                <td class="tabletext">Pověřenec: Ondřej Blail</td>
+                            </tr>
+                            <tr>
+                                <td class="tabletext">Tel. : +420 602 283 989</td>
+                            </tr>
+                            <tr>
+                                <td class="tabletext">email: ondrej.blail@innone.cz</td>
+                            </tr>
+
+                            </tbody>
+                        </table>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <footer>
+                                © 2021 Všechna práva vyhrazena.
+                            </footer>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
