--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 offset-1 text-nadpis">Vítejte na stránkách<br />mateřské školy Krupá.</div>
+            <div class="col-6 offset-1 text-nadpis">Vítejte na stránkách<br/>mateřské školy Krupá.</div>
             <div class="col-4 navig"><img src="{{ asset("/static/menubutton.png") }}" class="menutla">
                 <img src="{{ asset("/static/menubutton.png") }}" class="menutla"></div>
             <! --- dodelat, div neni spravne s obrazky, scale???-nesedi --->
@@ -11,12 +11,13 @@
         <div class="row phone-offset">
             <div class="tesinasdiv">
                 <div class="col-12 offset-0 maincont">
-                    <div class ="row">
+                    <div class="row">
                         <div class="col-12">
-                            <div class="text-center tesinasdiv text-whiteb" ><h1>Těší nás, že jste zavítali právě k nám.</h1>
+                            <div class="text-center tesinasdiv text-whiteb"><h1>Těší nás, že jste zavítali právě k
+                                    nám.</h1>
                                 <h3 class="padding15phone">Dopřejte svému dítěti krásně
                                     prožitá předškolní léta,</h3>
-                                <h3  class="padding15phone">jaká si pamatujete Vy a bez
+                                <h3 class="padding15phone">jaká si pamatujete Vy a bez
                                     váhání jej zapište do naší
                                     mateřské školy.</h3>
                             </div>
@@ -67,7 +68,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 text-center">
-                        <button class="btn btn-light rounded-pill btnnovinky">Více novinek</button>
+                            <button class="btn btn-light rounded-pill btnnovinky">Více novinek</button>
                             <! --- tehle button neco dela asi --->
                         </div>
                     </div>
@@ -80,24 +81,29 @@
                                         <div class="form-row">
                                             <div class="form-group col-md-6">
                                                 <label for="inputEmail4">Vaše jméno:</label>
-                                                <input type="text" class="form-control formtextinput forminpfocus" id="inputEmail4" placeholder="Zadejte vaše jméno">
+                                                <input type="text" class="form-control formtextinput forminpfocus"
+                                                       id="inputEmail4" placeholder="Zadejte vaše jméno">
                                             </div>
                                             <div class="form-group col-md-6">
                                                 <label for="inputNubmer4">Telefonní číslo:</label>
-                                                <input type="number" class="form-control formtextinput" id="inputPassword4" placeholder="Zadejte vaše telefonní číslo">
+                                                <input type="number" class="form-control formtextinput"
+                                                       id="inputPassword4" placeholder="Zadejte vaše telefonní číslo">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="inputAddress">Email:</label>
-                                            <input type="email" class="form-control formtextinput" id="inputAddress" placeholder="Email">
+                                            <input type="email" class="form-control formtextinput" id="inputAddress"
+                                                   placeholder="Email">
                                         </div>
 
                                         <div class="form-group">
                                             <label for="inputAddress2">Vaše zpráva:</label>
-                                            <textarea class="form-control formtextinput" id="inputAddress2" placeholder="Napište nám a co nejdříve vám odpovíme." rows="6" cols="50"></textarea>
+                                            <textarea class="form-control formtextinput" id="inputAddress2"
+                                                      placeholder="Napište nám a co nejdříve vám odpovíme." rows="6"
+                                                      cols="50"></textarea>
                                         </div>
                                         <div class="text-center">
-                                        <button type="submit" class="btn rounded-pill btnblue">Odeslat</button>
+                                            <button type="submit" class="btn rounded-pill btnblue">Odeslat</button>
                                         </div>
                                     </form>
                                 </div>
@@ -106,66 +112,65 @@
                     </div>
                     <div class="row">
                         <div class="col-10 offset-2">
-                        <table>
-                            <tbody>
-                            <tr class="spaceUnder">
-                                <td class="tablenadipis">Krupá 201</td>
+                            <table>
+                                <tbody>
+                                <tr class="spaceUnder">
+                                    <td class="tablenadipis">Krupá 201</td>
 
-                            </tr>
-                            <tr>
-                                <td class="tablenadipis">270 09 Krupá</td>
-                            </tr>
-                            <tr class="mgtr">
-                                <td>
-                                    &nbsp;
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="tabletext">email : mskrupa@poddzbansko.cz</td>
-                            </tr>
-                            <tr class="mgtr">
-                                <td>
-                                    &nbsp;
-                                </td>
-                            </tr>
-                            <tr class="spaceUnder">
-                                <td class="tablenadipis">Tel. Ředitelka MŠ :</td>
+                                </tr>
+                                <tr>
+                                    <td class="tablenadipis">270 09 Krupá</td>
+                                </tr>
+                                <tr class="mgtr">
+                                    <td>&nbsp;
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="tabletext">email : mskrupa@poddzbansko.cz</td>
+                                </tr>
+                                <tr class="mgtr">
+                                    <td>
+                                        &nbsp;
+                                    </td>
+                                </tr>
+                                <tr class="">
+                                    <td class="tablenadipis">Tel. Ředitelka MŠ :</td>
 
-                            </tr>
-                            <tr>
-                                <td class="tabletext">602 448 762</td>
-                            </tr>
-                            <tr class="mgtr">
-                            <td>
-                                &nbsp;
-                            </td>
-                            </tr>
-                            <tr class="spaceUnder">
-                                <td class="tablenadipis">Tel. Jídelna MŠ :</td>
+                                </tr>
+                                <tr>
+                                    <td class="tabletext">602 448 762</td>
+                                </tr>
+                                <tr class="">
+                                    <td>
+                                        &nbsp;
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="tablenadipis">Tel. Jídelna MŠ :</td>
 
-                            </tr>
-                            <tr>
-                                <td class="tabletext">731 471 585</td>
-                            </tr>
-                            <tr>
-                                <td class="tabletext">313 575 111</td>
-                            </tr>
-                            <tr class="mgtr">
-                            <td>
-                                &nbsp;
-                            </td>
-                            <tr>
-                                <td class="tabletext">Pověřenec: Ondřej Blail</td>
-                            </tr>
-                            <tr>
-                                <td class="tabletext">Tel. : +420 602 283 989</td>
-                            </tr>
-                            <tr>
-                                <td class="tabletext">email: ondrej.blail@innone.cz</td>
-                            </tr>
+                                </tr>
+                                <tr>
+                                    <td class="tabletext">731 471 585</td>
+                                </tr>
+                                <tr>
+                                    <td class="tabletext">313 575 111</td>
+                                </tr>
+                                <tr class="">
+                                    <td>
+                                        &nbsp;
+                                    </td>
+                                <tr>
+                                    <td class="tabletext">Pověřenec: Ondřej Blail</td>
+                                </tr>
+                                <tr>
+                                    <td class="tabletext">Tel. : +420 602 283 989</td>
+                                </tr>
+                                <tr>
+                                    <td class="tabletext">email: ondrej.blail@innone.cz</td>
+                                </tr>
 
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <div class="row">
