--- a/templates/frontend/forparents.html.twig
+++ b/templates/frontend/forparents.html.twig
@@ -170,6 +170,31 @@
                         </table>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12 pforp mg-top-20">
+                        Navýšení je z důvodu zdražování surovin. Ze
+                        zákona musí být zahrnut i pitný režim pro děti.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 pforp mg-top-20">
+                            V Krupé 22.8.2020
+                    </div>
+                    <div class="col-6 text-right mg-top-20">
+                        <div class="text-center">
+                            Růžena Horáčková <br />
+                            Ředitelka školy
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 text-center mg-top-50">
+                        <footer>
+                            © 2021 Všechna práva vyhrazena.
+                        </footer>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
