--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -45,6 +45,13 @@ h1
     padding-left: 25px;
     padding-right: 20px;
 }
+.text-right{
+    font-family: ptext;
+    font-size: 12.5px;
+    color: #FFFFFF;
+    text-align: right;
+    margin-top: 4px;
+}
 h5{
     font-family: Nadpis;
     color: #FFFFFF;
@@ -91,6 +98,10 @@ h4
 {
     background-color: #c03535;
     border-radius: 30%;
+}
+.mg-top-50
+{
+    margin-top: 50px;
 }
 .btnblue
 {
