--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -1,14 +1,13 @@
 {% extends "base.html.twig" %}
 
+
 {% block body %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 offset-1 text-nadpis">Vítejte na stránkách<br/>mateřské školy Krupá.</div>
-            <div class="col-4 navig"><img src="{{ asset("/static/menubutton.png") }}" class="menutla">
-                <img src="{{ asset("/static/menubutton.png") }}" class="menutla"></div>
-            <! --- dodelat, div neni spravne s obrazky, scale???-nesedi --->
+            {% include '/frontend/nav.html.twig' %}
         </div>
-        <div class="row phone-offset">
+        <! --- dodelat, div neni spravne s obrazky, scale???-nesedi --->
+        <div class="row phone-offset mg-top-nav">
             <div class="tesinasdiv">
                 <div class="col-12 offset-0 maincont">
                     <div class="row">
@@ -110,7 +109,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" id="contact">
                         <div class="col-10 offset-2">
                             <table>
                                 <tbody>
